arm64: dts: rockchip: enable 'rockchip,no-deep-low-power' for rk3308-evb
This patch can help us to fix pop after wake up via VAD,
and  enable 'rockchip,no-deep-low-power' on all of
rk3308-evb, not only amic boards.

Change-Id: I07f4674dd8c7fbd400b3c9b265fbaec6bfb5829e
Signed-off-by: Xing Zheng <zhengxing@rock-chips.com>
(cherry picked from commit 37a646162316d2d8c79d9d92fe099aa2bbd60d36)

--- a/arch/arm64/boot/dts/rockchip/rk3308-evb-v10.dtsi
+++ b/arch/arm64/boot/dts/rockchip/rk3308-evb-v10.dtsi
@@ -264,6 +264,7 @@
 &acodec {
 	status = "okay";
 
+	rockchip,no-deep-low-power;
 	rockchip,loopback-grp = <3>;
 	hp-ctl-gpios = <&gpio0 RK_PA1 GPIO_ACTIVE_HIGH>;
 	spk-ctl-gpios = <&gpio0 RK_PA5 GPIO_ACTIVE_HIGH>;
