arm: dts: rk3308-dot-rk816-v10-aarch32: add charge animation node
Change-Id: If65f87d7157106bd4314c973cbc6a8d550be9876
Signed-off-by: Joseph Chen <chenjh@rock-chips.com>
(cherry picked from commit 2de215e4af4a19aea7b3414e1dc99cbde5fac049)

--- a/arch/arm/boot/dts/rk3308-dot-rk816-v10-aarch32.dts
+++ b/arch/arm/boot/dts/rk3308-dot-rk816-v10-aarch32.dts
@@ -58,6 +58,11 @@
 		};
 	};
 
+	charge-animation {
+		compatible = "rockchip,uboot-charge";
+		status = "okay";
+	};
+
 	dummy_codec: dummy-codec {
 		compatible = "rockchip,dummy-codec";
 		#sound-dai-cells = <0>;
