--- a/arch/arm/boot/dts/rk3288-rockpi-n8-linux-dsi.dts
+++ b/arch/arm/boot/dts/rk3288-rockpi-n8-linux-dsi.dts
@@ -494,6 +494,16 @@
 };
 
 &pinctrl {
+	pinctrl-names = "default";
+	pinctrl-0 = <&cam_pwdn>;
+
+	cam {
+		cam_pwdn: cam-pwdn {
+			rockchip,pins =
+				<6 RK_PA6 0 &pcfg_pull_up_drv_8ma>;
+		};
+	};
+
 	hym8563 {
 		hym8563_int: hym8563-int {
 			rockchip,pins =
