--- a/arch/arm/boot/dts/rk3288-rockpi-n8-linux-dsi.dts
+++ b/arch/arm/boot/dts/rk3288-rockpi-n8-linux-dsi.dts
@@ -50,27 +50,6 @@
 		};
 	};
 
-#if 0
-	hdmi_analog_sound {
-		status = "okay";
-		compatible ="rockchip,rk3288-hdmi-analog",
-					"rockchip,rk3368-hdmi-analog";
-		rockchip,model = "rockchip,es8316-codec";
-		rockchip,cpu = <&i2s>;
-		rockchip,codec = <&es8316>, <&hdmi>;
-		rockchip,widgets =
-			        "Microphone", "Microphone Jack",
-			        "Headphone", "Headphone Jack";
-		rockchip,routing =
-					"MIC1", "Microphone Jack",
-					"MIC2", "Microphone Jack",
-					"Microphone Jack", "micbias1",
-					"Headphone Jack", "HPOL",
-					"Headphone Jack", "HPOR";
-	};
-#endif
-
-
 	sdio_pwrseq: sdio-pwrseq {
 		compatible = "mmc-pwrseq-simple";
 		clocks = <&rk808 1>;
@@ -106,6 +85,15 @@
 		regulator-always-on;
 		regulator-boot-on;
 		vin-supply = <&vcc5v0_usb>;
+	};
+
+	rk_headset {
+		status = "okay";
+		compatible = "rockchip_headset";
+		headset_gpio = <&gpio2 RK_PA3 GPIO_ACTIVE_HIGH>;
+		pinctrl-names = "default";
+		pinctrl-0 = <&hp_det>;
+		io-channels = <&saradc 2>;
 	};
 
 	wireless-bluetooth {
@@ -510,12 +498,13 @@
 				<5 RK_PC3 0 &pcfg_pull_up>;
 		};
 	};
-//	headphone {
-//		hp_det: hp-det {
-//			rockchip,pins =
-//				<0 RK_PB5 0 &pcfg_pull_up>;
-//		};
-//	};
+
+	headphone {
+		hp_det: hp-det {
+			rockchip,pins =
+				<2 RK_PA3 0 &pcfg_pull_down>;
+		};
+	};
 
 	sdio-pwrseq {
 		wifi_enable_h: wifi-enable-h {
