--- a/arch/arm/boot/dts/rk3288-rockpi-n8-linux-edp.dts
+++ b/arch/arm/boot/dts/rk3288-rockpi-n8-linux-edp.dts
@@ -167,6 +167,15 @@
 		vin-supply = <&vcc5v0_usb>;
 	};
 
+	rk_headset {
+		status = "okay";
+		compatible = "rockchip_headset";
+		headset_gpio = <&gpio2 RK_PA3 GPIO_ACTIVE_HIGH>;
+		pinctrl-names = "default";
+		pinctrl-0 = <&hp_det>;
+		io-channels = <&saradc 2>;
+	};
+
 	wireless-bluetooth {
 		compatible = "bluetooth-platdata";
 		uart_rts_gpios = <&gpio4 RK_PC3 GPIO_ACTIVE_LOW>;
@@ -538,6 +547,13 @@
 		hym8563_int: hym8563-int {
 			rockchip,pins =
 				<5 RK_PC3 0 &pcfg_pull_up>;
+		};
+	};
+
+	headphone {
+		hp_det: hp-det {
+			rockchip,pins =
+				<2 RK_PA3 0 &pcfg_pull_down>;
 		};
 	};
 
