rockchip_linux_defconfig: set CONFIG_AP6XXX=y
Signed-off-by: brian <brian@vamrs.com>

--- a/arch/arm/configs/rockchip_linux_defconfig
+++ b/arch/arm/configs/rockchip_linux_defconfig
@@ -203,7 +203,7 @@ CONFIG_RT2X00=y
 CONFIG_RT2800USB=y
 CONFIG_WL_ROCKCHIP=y
 CONFIG_WIFI_BUILD_MODULE=y
-CONFIG_AP6XXX=m
+CONFIG_AP6XXX=y
 CONFIG_RTL8188EU=m
 CONFIG_RTL8723DS=m
 CONFIG_MWIFIEX=m
