arm: rk3288-rockpi-n8: use hym8563 32k clock for wifi/bt module
Signed-off-by: brian <brian@vamrs.com>

--- a/arch/arm/boot/dts/rk3288-rockpi-n8-linux.dts
+++ b/arch/arm/boot/dts/rk3288-rockpi-n8-linux.dts
@@ -52,7 +52,7 @@
 
 	sdio_pwrseq: sdio-pwrseq {
 		compatible = "mmc-pwrseq-simple";
-		clocks = <&rk808 1>;
+		clocks = <&hym8563>;
 		clock-names = "ext_clock";
 		pinctrl-names = "default";
 		pinctrl-0 = <&wifi_enable_h>;
@@ -111,7 +111,7 @@
 	wireless-wlan {
 		compatible = "wlan-platdata";
 		rockchip,grf = <&grf>;
-		wifi_chip_type = "ap6256";
+		wifi_chip_type = "ap6255";
 		sdio_vref = <1800>;
 		WIFI,host_wake_irq = <&gpio4 RK_PD6 GPIO_ACTIVE_HIGH>;
 		status = "okay";
@@ -228,7 +228,7 @@
 		reg = <0x51>;
 		#clock-cells = <0>;
 		clock-frequency = <32768>;
-		clock-output-names = "xin32k";
+		clock-output-names = "hym8563";
 		pinctrl-names = "default";
 		pinctrl-0 = <&hym8563_int>;
 		interrupt-parent = <&gpio5>;
