arm64: dts: rockchip: add ROCK Pi 4A and 4C device tree
In order to reduce the duplication of code of rock pi 4 series board,
here move the common things to the rk3399-rock-pi-4.dtsi.

Signed-off-by: Stephen <stephen@vamrs.com>

--- a/arch/arm64/boot/dts/rockchip/rk3399-rock-pi-4a.dts
+++ b/arch/arm64/boot/dts/rockchip/rk3399-rock-pi-4a.dts
@@ -46,14 +46,6 @@
 
 / {
 
-	model = "ROCK PI 4B";
+	model = "ROCK PI 4A";
 	compatible = "rockchip,rockpi","rockchip,rk3399";
-};
-
-&wireless_wlan {
-	status = "okay";
-};
-
-&wireless_bluetooth {
-	status = "okay";
 };
