arch: arm64: dts: rk3399pro-rockpi-n10:modify imx219's module name and lens name
Signed-off-by: brian <brian@vamrs.com>

--- a/arch/arm64/boot/dts/rockchip/rk3399pro-rockpi-n10-linux-dsi.dts
+++ b/arch/arm64/boot/dts/rockchip/rk3399pro-rockpi-n10-linux-dsi.dts
@@ -280,8 +280,8 @@
 
 		rockchip,camera-module-index = <0>;
 		rockchip,camera-module-facing = "back";
-		rockchip,camera-module-name = "imx219";
-		rockchip,camera-module-lens-name = "none";
+		rockchip,camera-module-name = "raspberry";
+		rockchip,camera-module-lens-name = "default";
 
 		port {
 			ucam_out0: endpoint {
