--- a/arch/arm64/boot/dts/rockchip/rk3399pro-rockpi-n10-android.dts
+++ b/arch/arm64/boot/dts/rockchip/rk3399pro-rockpi-n10-android.dts
@@ -386,10 +386,14 @@
 
 		clocks = <&cru SCLK_CIF_OUT>;
 		clock-names = "clk_cif_out";
+
+		pinctrl-names = "default";
+		pinctrl-0 = <&cam_pwdn>;
+
 		rockchip,camera-module-index = <0>;
 		rockchip,camera-module-facing = "back";
-		rockchip,camera-module-name = "imx219";
-		rockchip,camera-module-lens-name = "none";
+		rockchip,camera-module-name = "raspberry";
+		rockchip,camera-module-lens-name = "default";
 
 		port {
 			ucam_out0: endpoint {
@@ -658,9 +662,6 @@
 
 
 &pinctrl {
-	pinctrl-names = "default";
-	pinctrl-0 = <&cam_pwdn>;
-
 	cam {
 		cam_pwdn: cam-pwdn {
 			rockchip,pins =
@@ -689,7 +690,7 @@
 		};
 	};
 
-    headphone {
+	headphone {
 		hp_det: hp-det {
 			rockchip,pins =
 				<2 RK_PB4 0 &pcfg_pull_none>;
