arm64: rockchip_linux_defconfig: builtin MTD device and USB_USBHUB_RESET
Signed-off-by: Stephen <stephen@vamrs.com>

--- a/arch/arm64/configs/rockchip_linux_defconfig
+++ b/arch/arm64/configs/rockchip_linux_defconfig
@@ -433,13 +433,12 @@ CONFIG_DMA_CMA=y
 CONFIG_CMA_SIZE_MBYTES=256
 CONFIG_CONNECTOR=y
 CONFIG_MTD=y
-CONFIG_MTD_CMDLINE_PARTS=m
-CONFIG_MTD_OF_PARTS=m
-CONFIG_MTD_BLOCK=m
-CONFIG_MTD_M25P80=m
-CONFIG_MTD_NAND_IDS=m
-CONFIG_MTD_SPI_NOR=m
-CONFIG_MTD_UBI=m
+CONFIG_MTD_CMDLINE_PARTS=y
+CONFIG_MTD_BLOCK=y
+CONFIG_MTD_M25P80=y
+CONFIG_MTD_NAND_IDS=y
+CONFIG_MTD_SPI_NOR=y
+CONFIG_MTD_UBI=y
 CONFIG_ZRAM=m
 CONFIG_BLK_DEV_LOOP=y
 CONFIG_BLK_DEV_CRYPTOLOOP=m
@@ -1015,6 +1014,7 @@ CONFIG_USB_SEVSEG=m
 CONFIG_USB_LCD=m
 CONFIG_USB_LED=m
 CONFIG_USB_EZUSB_FX2=y
+CONFIG_USB_USBHUB_RESET=y
 CONFIG_USB_GADGET=y
 CONFIG_USB_GADGET_DEBUG_FILES=y
 CONFIG_USB_GADGET_VBUS_DRAW=500
