--- a/arch/arm64/configs/px30_linux_defconfig
+++ b/arch/arm64/configs/px30_linux_defconfig
@@ -225,7 +225,6 @@ CONFIG_WATCHDOG=y
 CONFIG_DW_WATCHDOG=y
 CONFIG_MFD_RK618=y
 CONFIG_MFD_RK808=y
-CONFIG_MFD_RK1000=y
 CONFIG_FUSB_30X=y
 CONFIG_REGULATOR=y
 CONFIG_REGULATOR_DEBUG=y
@@ -276,6 +275,7 @@ CONFIG_ROCKCHIP_DRM_TVE=y
 CONFIG_ROCKCHIP_RGB=y
 CONFIG_DRM_ROCKCHIP_RK618=y
 CONFIG_DRM_PANEL_SIMPLE=y
+CONFIG_DRM_RK1000=y
 CONFIG_MALI_PWRSOFT_765=y
 CONFIG_MALI_BIFROST_FOR_LINUX=y
 CONFIG_MALI_BIFROST=y
@@ -283,6 +283,7 @@ CONFIG_MALI_BIFROST_DEVFREQ=y
 CONFIG_MALI_PLATFORM_NAME="rk"
 CONFIG_MALI_BIFROST_EXPERT=y
 CONFIG_MALI_BIFROST_DEBUG=y
+CONFIG_FB_MODE_HELPERS=y
 CONFIG_BACKLIGHT_LCD_SUPPORT=y
 # CONFIG_LCD_CLASS_DEVICE is not set
 CONFIG_BACKLIGHT_CLASS_DEVICE=y
