--- a/arch/arm64/boot/dts/rockchip/px30-rockpro.dts
+++ b/arch/arm64/boot/dts/rockchip/px30-rockpro.dts
@@ -41,7 +41,7 @@
 		};
 	};
 
-	backlight: backlight {
+/* 	backlight: backlight {
 		status = "okay";
 		compatible = "pwm-backlight";
 		pwms = <&pwm1 0 25000 0>;
@@ -119,6 +119,40 @@
 			panel_in_hdmi: endpoint {
 				remote-endpoint = <&hdmi_out_panel>;
 			};
+		};
+	}; */
+
+/*  	rk817_sound: rk817-sound {
+		compatible = "simple-audio-card";
+		simple-audio-card,format = "i2s";
+		simple-audio-card,name = "rockchip,rk817-codec";
+		simple-audio-card,mclk-fs = <256>;
+		simple-audio-card,widgets =
+			"Microphone", "Mic Jack",
+			"Headphone", "Headphone Jack";
+		simple-audio-card,routing =
+			"Mic Jack", "MICBIAS1",
+			"IN1P", "Mic Jack",
+			"Headphone Jack", "HPOL",
+			"Headphone Jack", "HPOR";
+		simple-audio-card,cpu {
+			sound-dai = <&i2s1_2ch>;
+		};
+		simple-audio-card,codec {
+			sound-dai = <&rk817_codec>;
+		};
+	}; */
+
+	rk1000_sound: rk1000-sound {
+		compatible = "simple-audio-card";
+		simple-audio-card,format = "i2s";
+		simple-audio-card,name = "rockchip,rk1000-codec";
+		simple-audio-card,mclk-fs = <256>;
+		simple-audio-card,cpu {
+			sound-dai = <&i2s1_2ch>;
+		};
+		simple-audio-card,codec {
+			sound-dai = <&rk1000_codec>;
 		};
 	};
 
@@ -565,21 +599,21 @@
 			extcon = <&u2phy>;
 		};
 
-//		rk817_codec: codec {
-//			#sound-dai-cells = <0>;
-//			compatible = "rockchip,rk817-codec";
-//			clocks = <&cru SCLK_I2S1_OUT>;
-//			clock-names = "mclk";
-//			pinctrl-names = "default";
-//			pinctrl-0 = <&i2s1_2ch_mclk>;
-//			hp-volume = <20>;
-//			spk-volume = <20>;
-//			mic-in-differential;
-//			status = "okay";
-//		};
+/* 		rk817_codec: codec {
+			#sound-dai-cells = <0>;
+			compatible = "rockchip,rk817-codec";
+			clocks = <&cru SCLK_I2S1_OUT>;
+			clock-names = "mclk";
+			pinctrl-names = "default";
+			pinctrl-0 = <&i2s1_2ch_mclk>;
+			hp-volume = <20>;
+			spk-volume = <20>;
+			mic-in-differential;
+			status = "okay";
+		}; */
 	};
 
-	rk618: rk618@50 {
+/* 	rk618: rk618@50 {
 		compatible = "rockchip,rk618";
 		reg = <0x50>;
 		pinctrl-names = "default";
@@ -644,10 +678,65 @@
 				};
 			};
 		};
+	}; */
+
+	rk1000_ctl: rk1000-ctl@40 {
+		status = "okay";
+		compatible = "rockchip,rk1000-ctl";
+		reg = <0x40>;
+		reset-gpios = <&gpio1 RK_PC4 GPIO_ACTIVE_LOW>;
+		clocks = <&cru SCLK_I2S1_OUT>;
+		clock-names = "mclk";
+		pinctrl-names = "default";
+		pinctrl-0 = <&i2s1_2ch_mclk>;
+	};
+
+	rk1000_tve: rk1000-tve@42 {
+		status = "okay";
+		compatible = "rockchip,rk1000-tve";
+		reg = <0x42>;
+		rockchip,data-width = <24>;
+		rockchip,output = "rgb";
+		rockchip,tvemode = <1>; //0 for PAL, 1 for NTSC
+		rockchip,ctl = <&rk1000_ctl>;
+		#address-cells = <1>;
+		#size-cells = <0>;
+
+		tve_in: port@0 {
+			reg = <0>;
+
+			tve_in_rgb: endpoint {
+				remote-endpoint = <&rgb_out_tve>;
+			};
+		};
+	};
+
+	rk1000_codec: rk1000-codec@60 {
+		compatible = "rockchip,rk1000-codec";
+		reg = <0x60>;
+		#sound-dai-cells = <0>;
+		rockchip,ctl = <&rk1000_ctl>;
+		//rockchip,spk-en-gpio = <&gpio3 31 GPIO_ACTIVE_LOW>;
+		rockchip,pa-en-time-ms = <5000>;
+		status = "okay";
 	};
 };
 
 &rgb {
+	status = "okay";
+
+	ports {
+		port@1 {
+			reg = <1>;
+
+			rgb_out_tve: endpoint {
+				remote-endpoint = <&tve_in_rgb>;
+			};
+		};
+	};
+};
+
+/* &rgb {
 	status = "okay";
 
 	ports {
@@ -659,7 +748,7 @@
 			};
 		};
 	};
-};
+}; */
 
 &route_rgb {
 	connect = <&vopl_out_rgb>;
